--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,70 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
+@import url('theme.css');
 a,p,h1,h2,h3,h4,h5,h6,em,b,i,u,q{
     font-family: "Montserrat";
 }
 
-a{
+.topnav {
+    overflow: hidden;
+    background-color: #fff;
+}
+
+.topnav a {
+    float: left;
+    display: block;
+    color: #917033 ;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
+    font-size: 17px;
+}
+
+.topnav a:hover {
+    text-decoration: underline;
+    color: black;
+}
+
+.topnav a.active {
+    background-color: #b68d40;
+    text-decoration: overline;
+    color: white;
+}
+
+.topnav a.active:hover {
+    background-color: #b68d40;
+    text-decoration: overline;
+    color: black;
+}
+
+.topnav .icon {
+    display: none;
+}
+
+@media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {
+        display: none;
+    }
+
+    .topnav a.icon {
+        float: right;
+        display: block;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .topnav.responsive {
+        position: relative;
+    }
+
+    .topnav.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
 }
