--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ a,p,h1,h2,h3,h4,h5,h6,em,b,i,u,q{
 }
 
 .topnav a:hover {
-    text-decoration: underline;
+    text-decoration: dotted;
     color: black;
 }
 
